--- a/index.html
+++ b/index.html
@@ -5,7 +5,121 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    hola mundo
-  </body>
+  <a href="#">webstudio</a>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">estudio</a></li>
+        <li><a href="#">portafolio</a></li>
+        <li><a href="#">contacto</a></li>
+      </ul>
+    </nav>
+    <ul>
+      <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com</li>
+      <li><a href="tel:+525555296000"></a>+55 5529 6000</li>
+    </ul>
+  </header>
+  <section>
+    <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
+    <button type="button">Solicite nuestro servicio</button>
+  </section>
+  <main>
+    <section>
+      <ul>
+        <li>
+          <h3>ATENCIÓN A LOS DETALLES</h3>
+          <p>
+            Nos adentramos en todos los detalles y procesos de su negocio, para
+            así desarrollar una solución a su medida.
+          </p>
+        </li>
+        <li>
+          <h3>PUNTUALIDAD</h3>
+          <p>
+            Con nosotros, usted puede sentirse seguro y protegido. Un principio
+            importante de la empresa: respetar su tiempo y respetar los plazos
+            acordados.
+          </p>
+        </li>
+        <li>
+          <h3>PLANIFICACIÓN</h3>
+          <p>
+            Usted podrá observar y participar en cada fase del desarrollo y
+            aplicación de soluciones.
+          </p>
+        </li>
+        <li>
+          <h3>TEGNOLOGÍA MODERNA</h3>
+          <p>
+            Usamos herramientas innovadoras para resolver las tareas asignadas.
+            Es hora de simplificar los procesos laborales.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>A qué nos dedicamos</h2>
+      <ul>
+        <li>
+          <img
+            src="./imagen/Diseño.web.2.jpg"
+            alt="a que nos dedicamos"
+            width="270"
+          />
+        </li>
+        <li>
+          <img
+            src="./imagen/programador.web.3.jpg"
+            alt="a que nos dedicamos"
+            width="270"
+          />
+        </li>
+        <li>
+          <img
+            src="./imagen/Diseño.app.1.jpg"
+            alt="a que nos dedicamos"
+            width="270"
+          />
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Nuestro Equipo</h2>
+      <ul>
+        <li>
+          <img src="./imagen/diseñador.1.jpg" alt="pablo mijango" width="270" />
+        </li>
+        <li>
+          <img
+            src="./imagen/diseñador.full.jpg"
+            alt="andres cubo"
+            width="270"
+          />
+        </li>
+        <li>
+          <img
+            src="./imagen/desarrolladora frontend.jpg"
+            alt="carla palacio"
+            width="270"
+          />
+        </li>
+        <li>
+          <img src="./imagen/marketing.1.jpg" alt="mario dorado" width="270" />
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <address>
+      <a href="#">webstudio</a>
+      <ul>
+        <li>
+          <a href="#GoogleMapsURl"></a> Calz. Ticomán 500, Ciudad de México,
+          CDMX, México
+        </li>
+        <li><a href="mailto:info@example.com"></a>info@example.com</li>
+        <li><a href="tel:+525555296000"></a>+52 55 5529 6000</li>
+      </ul>
+    </address>
+  </footer>
 </html>
