--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <a href="#">webstudio</a>
   <header>
+    <a href="#">webstudio</a>
     <nav>
       <ul>
         <li><a href="#">estudio</a></li>
@@ -15,15 +15,17 @@
       </ul>
     </nav>
     <ul>
-      <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com</li>
-      <li><a href="tel:+525555296000"></a>+55 5529 6000</li>
+      <li><a href="mailto:info@devstudio.com">info@devstudio.com </a></li>
+      <li><a href="tel:+525555296000">+55 5529 6000</a></li>
     </ul>
   </header>
-  <section>
+  <section> 
+    <main>
     <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
     <button type="button">Solicite nuestro servicio</button>
+  </main>
   </section>
-  <main>
+ 
     <section>
       <ul>
         <li>
@@ -62,21 +64,21 @@
       <ul>
         <li>
           <img
-            src="./imagen/Diseño.web.2.jpg"
+            src="./imagen/computador.jpg"
             alt="a que nos dedicamos"
             width="270"
           />
         </li>
         <li>
           <img
-            src="./imagen/programador.web.3.jpg"
+            src="./imagen/computador2.jpg"
             alt="a que nos dedicamos"
             width="270"
           />
         </li>
         <li>
           <img
-            src="./imagen/Diseño.app.1.jpg"
+            src="./imagen/table.jpg"
             alt="a que nos dedicamos"
             width="270"
           />
@@ -87,31 +89,37 @@
       <h2>Nuestro Equipo</h2>
       <ul>
         <li>
-          <img src="./imagen/diseñador.1.jpg" alt="pablo mijango" width="270" />
+          <img src="./imagen/Pablo Mijango.jpg" alt="pablo mijango" width="270">
+          <h6>Pablo Mijango</h6>     
+          <h6>Diseñador ui</h6>
         </li>
         <li>
           <img
-            src="./imagen/diseñador.full.jpg"
+            src="./imagen/Andres Cubos.jpg"
             alt="andres cubo"
-            width="270"
-          />
+            width="270">
+            <h6>Andres Cubos</h6>     
+            <h6>Diseñador de Productos</h6>
         </li>
         <li>
           <img
-            src="./imagen/desarrolladora frontend.jpg"
+            src="./imagen/carlas palacio.jpg"
             alt="carla palacio"
-            width="270"
-          />
+            width="270"><h6>Carlas Palacio</h6>     
+            <h6>Desarrolladora Frontend</h6>  
+          
         </li>
         <li>
-          <img src="./imagen/marketing.1.jpg" alt="mario dorado" width="270" />
+          <img src="./imagen/Mario.jpg" alt="mario dorado" width="270">
+          <h6>Mario Dorado</h6>     
+          <h6>Marketing</h6>     
         </li>
       </ul>
     </section>
   </main>
   <footer>
+    <a href="#">webstudio</a>
     <address>
-      <a href="#">webstudio</a>
       <ul>
         <li>
           <a href="#GoogleMapsURl"></a> Calz. Ticomán 500, Ciudad de México,
