--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
       <li><a href="tel:+525555296000">+55 5529 6000</a></li>
     </ul>
   </header>
+  <main>
   <section> 
-    <main>
+    
     <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
     <button type="button">Solicite nuestro servicio</button>
-  </main>
-  </section>
  
+  </section>
+</main>
     <section>
       <ul>
         <li>
@@ -89,13 +90,13 @@
       <h2>Nuestro Equipo</h2>
       <ul>
         <li>
-          <img src="./imagen/Pablo Mijango.jpg" alt="pablo mijango" width="270">
+          <img src="./imagen/Pablo_Mijango.jpg" alt="pablo mijango" width="270">
           <h6>Pablo Mijango</h6>     
           <h6>Diseñador ui</h6>
         </li>
         <li>
           <img
-            src="./imagen/Andres Cubos.jpg"
+            src="./imagen/aAndres_cubos.jpg"
             alt="andres cubo"
             width="270">
             <h6>Andres Cubos</h6>     
@@ -103,7 +104,7 @@
         </li>
         <li>
           <img
-            src="./imagen/carlas palacio.jpg"
+            src="./imagen/carlas_palacio.jpg"
             alt="carla palacio"
             width="270"><h6>Carlas Palacio</h6>     
             <h6>Desarrolladora Frontend</h6>  
@@ -122,11 +123,11 @@
     <address>
       <ul>
         <li>
-          <a href="#GoogleMapsURl"></a> Calz. Ticomán 500, Ciudad de México,
-          CDMX, México
+          <a href="#GoogleMapsURl"> Calz. Ticomán 500, Ciudad de México,
+          CDMX, México</a>
         </li>
-        <li><a href="mailto:info@example.com"></a>info@example.com</li>
-        <li><a href="tel:+525555296000"></a>+52 55 5529 6000</li>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
       </ul>
     </address>
   </footer>
