--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+  <body>
   <header>
     <a href="#">webstudio</a>
     <nav>
@@ -19,14 +20,10 @@
       <li><a href="tel:+525555296000">+55 5529 6000</a></li>
     </ul>
   </header>
-  <main>
   <section> 
-    
     <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
     <button type="button">Solicite nuestro servicio</button>
- 
   </section>
-</main>
     <section>
       <ul>
         <li>
@@ -91,33 +88,34 @@
       <ul>
         <li>
           <img src="./imagen/Pablo_Mijango.jpg" alt="pablo mijango" width="270">
-          <h6>Pablo Mijango</h6>     
-          <h6>Diseñador ui</h6>
+          <h3>Pablo Mijango</h3>     
+          <P>Diseñador ui</P>
         </li>
         <li>
           <img
             src="./imagen/aAndres_cubos.jpg"
-            alt="andres cubo"
+            alt="andres_cubo"
             width="270">
-            <h6>Andres Cubos</h6>     
-            <h6>Diseñador de Productos</h6>
+            <h3>Andres Cubos</h3>     
+            <P>Diseñador de Productos</P>
         </li>
         <li>
           <img
             src="./imagen/carlas_palacio.jpg"
             alt="carla palacio"
-            width="270"><h6>Carlas Palacio</h6>     
-            <h6>Desarrolladora Frontend</h6>  
+            width="270"><h6H3>Carlas Palacio</h6H3>     
+            <P>Desarrolladora Frontend</P>  
           
         </li>
         <li>
           <img src="./imagen/Mario.jpg" alt="mario dorado" width="270">
-          <h6>Mario Dorado</h6>     
-          <h6>Marketing</h6>     
+          <h3>Mario Dorado</h3>     
+          <p>Marketing</p>     
         </li>
       </ul>
     </section>
   </main>
+</body>
   <footer>
     <a href="#">webstudio</a>
     <address>
