--- a/index.html
+++ b/index.html
@@ -6,123 +6,130 @@
     <title>Document</title>
   </head>
   <body>
-  <header>
-    <a href="#">webstudio</a>
-    <nav>
-      <ul>
-        <li><a href="#">estudio</a></li>
-        <li><a href="#">portafolio</a></li>
-        <li><a href="#">contacto</a></li>
-      </ul>
-    </nav>
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com </a></li>
-      <li><a href="tel:+525555296000">+55 5529 6000</a></li>
-    </ul>
-  </header>
-  <section> 
-    <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
-    <button type="button">Solicite nuestro servicio</button>
-  </section>
-    <section>
-      <ul>
-        <li>
-          <h3>ATENCIÓN A LOS DETALLES</h3>
-          <p>
-            Nos adentramos en todos los detalles y procesos de su negocio, para
-            así desarrollar una solución a su medida.
-          </p>
-        </li>
-        <li>
-          <h3>PUNTUALIDAD</h3>
-          <p>
-            Con nosotros, usted puede sentirse seguro y protegido. Un principio
-            importante de la empresa: respetar su tiempo y respetar los plazos
-            acordados.
-          </p>
-        </li>
-        <li>
-          <h3>PLANIFICACIÓN</h3>
-          <p>
-            Usted podrá observar y participar en cada fase del desarrollo y
-            aplicación de soluciones.
-          </p>
-        </li>
-        <li>
-          <h3>TEGNOLOGÍA MODERNA</h3>
-          <p>
-            Usamos herramientas innovadoras para resolver las tareas asignadas.
-            Es hora de simplificar los procesos laborales.
-          </p>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2>A qué nos dedicamos</h2>
-      <ul>
-        <li>
-          <img
-            src="./imagen/computador.jpg"
-            alt="a que nos dedicamos"
-            width="270"
-          />
-        </li>
-        <li>
-          <img
-            src="./imagen/computador2.jpg"
-            alt="a que nos dedicamos"
-            width="270"
-          />
-        </li>
-        <li>
-          <img
-            src="./imagen/table.jpg"
-            alt="a que nos dedicamos"
-            width="270"
-          />
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2>Nuestro Equipo</h2>
-      <ul>
-        <li>
-          <img src="./imagen/Pablo_Mijango.jpg" alt="pablo mijango" width="270">
-          <h3>Pablo Mijango</h3>     
-          <P>Diseñador ui</P>
-        </li>
-        <li>
-          <img
-            src="./imagen/aAndres_cubos.jpg"
-            alt="andres_cubo"
-            width="270">
-            <h3>Andres Cubos</h3>     
-            <P>Diseñador de Productos</P>
-        </li>
-        <li>
-          <img
-            src="./imagen/carlas_palacio.jpg"
-            alt="carla palacio"
-            width="270"><h6H3>Carlas Palacio</h6H3>     
-            <P>Desarrolladora Frontend</P>  
-          
-        </li>
-        <li>
-          <img src="./imagen/Mario.jpg" alt="mario dorado" width="270">
-          <h3>Mario Dorado</h3>     
-          <p>Marketing</p>     
-        </li>
-      </ul>
-    </section>
-  </main>
-</body>
+    <main>
+      <header>
+        <a href="#">webstudio</a>
+        <nav>
+          <ul>
+            <li><a href="#">estudio</a></li>
+            <li><a href="#">portafolio</a></li>
+            <li><a href="#">contacto</a></li>
+          </ul>
+        </nav>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com </a></li>
+          <li><a href="tel:+525555296000">+55 5529 6000</a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
+        <button type="button">Solicite nuestro servicio</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h3>ATENCIÓN A LOS DETALLES</h3>
+            <p>
+              Nos adentramos en todos los detalles y procesos de su negocio,
+              para así desarrollar una solución a su medida.
+            </p>
+          </li>
+          <li>
+            <h3>PUNTUALIDAD</h3>
+            <p>
+              Con nosotros, usted puede sentirse seguro y protegido. Un
+              principio importante de la empresa: respetar su tiempo y respetar
+              los plazos acordados.
+            </p>
+          </li>
+          <li>
+            <h3>PLANIFICACIÓN</h3>
+            <p>
+              Usted podrá observar y participar en cada fase del desarrollo y
+              aplicación de soluciones.
+            </p>
+          </li>
+          <li>
+            <h3>TEGNOLOGÍA MODERNA</h3>
+            <p>
+              Usamos herramientas innovadoras para resolver las tareas
+              asignadas. Es hora de simplificar los procesos laborales.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>A qué nos dedicamos</h2>
+        <ul>
+          <li>
+            <img
+              src="./imagen/computador.jpg"
+              alt="a que nos dedicamos"
+              width="270"
+            />
+          </li>
+          <li>
+            <img
+              src="./imagen/computador2.jpg"
+              alt="a que nos dedicamos"
+              width="270"
+            />
+          </li>
+          <li>
+            <img
+              src="./imagen/table.jpg"
+              alt="a que nos dedicamos"
+              width="270"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Nuestro Equipo</h2>
+        <ul>
+          <li>
+            <img
+              src="./imagen/Pablo_Mijango.jpg"
+              alt="pablo mijango"
+              width="270"
+            />
+            <h3>Pablo Mijango</h3>
+            <p>Diseñador ui</p>
+          </li>
+          <li>
+            <img
+              src="./imagen/aAndres_cubos.jpg"
+              alt="andres_cubo"
+              width="270"
+            />
+            <h3>Andres Cubos</h3>
+            <p>Diseñador de Productos</p>
+          </li>
+          <li>
+            <img
+              src="./imagen/carlas_palacio.jpg"
+              alt="carla palacio"
+              width="270"
+            /><h6H3>Carlas Palacio</h6H3>
+            <p>Desarrolladora Frontend</p>
+          </li>
+          <li>
+            <img src="./imagen/Mario.jpg" alt="mario dorado" width="270" />
+            <h3>Mario Dorado</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
   <footer>
     <a href="#">webstudio</a>
     <address>
       <ul>
         <li>
-          <a href="#GoogleMapsURl"> Calz. Ticomán 500, Ciudad de México,
-          CDMX, México</a>
+          <a href="#GoogleMapsURl">
+            Calz. Ticomán 500, Ciudad de México, CDMX, México</a
+          >
         </li>
         <li><a href="mailto:info@example.com">info@example.com</a></li>
         <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
