--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <main>
+    
       <header>
+        <main>
         <a href="#">webstudio</a>
         <nav>
           <ul>
@@ -109,8 +110,8 @@
             <img
               src="./imagen/carlas_palacio.jpg"
               alt="carla palacio"
-              width="270"
-            /><h6H3>Carlas Palacio</h6H3>
+              width="270"/>
+              <h3>Carlas Palacio</h3>
             <p>Desarrolladora Frontend</p>
           </li>
           <li>
