--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
     <title>Document</title>
   </head>
   <body>
-    
-      <header>
-        <main>
-        <a href="#">webstudio</a>
-        <nav>
-          <ul>
-            <li><a href="#">estudio</a></li>
-            <li><a href="#">portafolio</a></li>
-            <li><a href="#">contacto</a></li>
-          </ul>
-        </nav>
+    <header>
+      <a href="#">webstudio</a>
+      <nav>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com </a></li>
-          <li><a href="tel:+525555296000">+55 5529 6000</a></li>
+          <li><a href="#">estudio</a></li>
+          <li><a href="#">portafolio</a></li>
+          <li><a href="#">contacto</a></li>
         </ul>
-      </header>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com </a></li>
+        <li><a href="tel:+525555296000">+55 5529 6000</a></li>
+      </ul>
+    </header>
+    <main>
       <section>
         <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
         <button type="button">Solicite nuestro servicio</button>
@@ -110,8 +109,9 @@
             <img
               src="./imagen/carlas_palacio.jpg"
               alt="carla palacio"
-              width="270"/>
-              <h3>Carlas Palacio</h3>
+              width="270"
+            />
+            <h3>Carlas Palacio</h3>
             <p>Desarrolladora Frontend</p>
           </li>
           <li>
